--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -51,15 +51,17 @@
       </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-  <script src = "bootstrap-validate.js"></script> -->
+  <script src = "bootstrap-validate.js"></script> --> 
 
-<!-- 
+
+
+
 
   <div class="row">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <div class="col-md-6 offset-md-3">
-      <!-- <div class="background">
+       <div class="background">
         <div class="shape"></div>
         <div class="shape"></div>
     </div> 
@@ -110,7 +112,7 @@
             <div *ngIf="registerForm.controls.cpassword.errors.required">Enter password again</div>
             <div *ngIf="registerForm.controls.cpassword.errors.minlength">Password must be at least 8 characters</div>
             <div *ngIf="registerForm.controls.cpassword.errors.MustMatch">Password entered is not the same</div>
-            <!-- <div *ngIf="registerForm.controls.cpassword.errors.required">Enter password again</div> 
+            <div *ngIf="registerForm.controls.cpassword.errors.required">Enter password again</div> 
                    
           </div>
     </div>
@@ -124,11 +126,14 @@
   </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-     -->
+    
 
 
 
-    <!DOCTYPE html>
+
+
+
+    <!-- <!DOCTYPE html>
     <html lang="en">
     <head>
       
@@ -140,6 +145,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Didact Gothic' rel='stylesheet'>
+
+
+        
     
     
     </head>
@@ -150,7 +158,7 @@
                     <div class="shape"></div>
                     <div class="shape"></div>
                 </div>
-                <form [formGroup]="form" (ngSubmit)="onSubmit()">
+                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                     <table>
                         
                             <h3 id="logo">Register</h3>
@@ -208,11 +216,11 @@
                         
                     </table> 
                     
-                    <button id="loginbtn" [disabled]="form.get('username')?.invalid || form.get('password')?.invalid" type="submit">Register</button>
+                    <button id="loginbtn" [disabled]="registerForm.get('username')?.invalid || registerForm.get('password')?.invalid" type="submit">Register</button>
                             
                 </form>
             </div>
         </div>
     </body>
 
-    </html>
+    </html>  -->
