--- a/Front-End/Image-Converter/src/app/register/register.component.html
+++ b/Front-End/Image-Converter/src/app/register/register.component.html
@@ -56,8 +56,9 @@
 
 
 
+<!-- <working functionality> -->
 
-  <div class="row">
+  <!-- <div class="row">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <div class="col-md-6 offset-md-3">
@@ -125,15 +126,15 @@
   </div>
   </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
     
 
 
 
 
 
-
-    <!-- <!DOCTYPE html>
+<!-- <Moe's UI> -->
+    <!DOCTYPE html>
     <html lang="en">
     <head>
       
@@ -158,7 +159,7 @@
                     <div class="shape"></div>
                     <div class="shape"></div>
                 </div>
-                <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+                <form [formGroup]="form" (ngSubmit)="onSubmit()">
                     <table>
                         
                             <h3 id="logo">Register</h3>
@@ -216,11 +217,11 @@
                         
                     </table> 
                     
-                    <button id="loginbtn" [disabled]="registerForm.get('username')?.invalid || registerForm.get('password')?.invalid" type="submit">Register</button>
+                    <button id="loginbtn" [disabled]="form.get('username')?.invalid || form.get('password')?.invalid" type="submit">Register</button>
                             
                 </form>
             </div>
         </div>
     </body>
 
-    </html>  -->
+    </html> 
