--- a/Front-End/Image-Converter/src/app/contact/contact.component.html
+++ b/Front-End/Image-Converter/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <div class="w3-container" id="contact" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-black"><b>Contact.</b></h1>
     <hr style="width:50px;border:5px solid black" class="w3-round">
-    <p>Get in touch with the development team.</p>
+    <p>User Feedback </p>
     <img *ngIf="loading" src="assets/loading.gif" width="400" />
     <form *ngIf="!loading" [formGroup]="form" (ngSubmit)="onSubmit()" target="_blank">
      <!-- <div class="w3-section">
