--- a/Front-End/Image-Converter/src/app/nav/nav.component.html
+++ b/Front-End/Image-Converter/src/app/nav/nav.component.html
@@ -12,35 +12,39 @@
   
   <mat-sidenav-container>
     <mat-sidenav #sidenav="matSidenav" class="mat-elevation-z8">
-      <img
+      <!-- <img
         class="avatar mat-elevation-z8"
         src="https://source.unsplash.com/c_GmwfHBDzk/200x200"
       />
   
       <h4 class="name">John Smith</h4>
-      <p class="designation">Software Engineer</p>
+      <p class="designation">Software Engineer</p> -->
   
-      <mat-divider></mat-divider>
+      <mat-divider></mat-divider> 
   
       <button mat-button class="menu-button" routerLink="/home">
         <mat-icon>home</mat-icon>
         <span>Home</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/upload">
+      <button  mat-button class="menu-button" routerLink="/upload">
         <mat-icon>add_photo_alternate</mat-icon>
         <span>Upload Image</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/profile">
+      <button mat-button class="menu-button" routerLink="/livegraph">
         <mat-icon>brush</mat-icon>
         <span>Draw Graph using formulae</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/profile">
+      <button mat-button class="menu-button" routerLink="/uploadHistory">
         <mat-icon>history</mat-icon>
         <span>Upload History</span>
       </button>
-      <button mat-button class="menu-button" routerLink="/profile">
+      <button mat-button class="menu-button" routerLink="/unrecognzied">
         <mat-icon>report_problem</mat-icon>
         <span>Unrecognized Images</span>
+      </button>
+      <button mat-button class="menu-button" routerLink="/activitytracker">
+        <mat-icon>track_changes</mat-icon>
+        <span>Activity Tracker</span>
       </button>
       <button mat-button class="menu-button" routerLink="/profile">
         <mat-icon>person</mat-icon>
@@ -60,7 +64,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
       <div class="content mat-elevation-z8">
-        <router-outlet></router-outlet>
+        <router-outlet ></router-outlet>
       </div>
     </mat-sidenav-content>
   </mat-sidenav-container>
