--- a/Front-End/Image-Converter/src/app/converter/converter.component.html
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.html
@@ -5,7 +5,7 @@
         </div>
 
 
-        <div class="center" *ngIf="loading">
+        <!-- <div class="center" *ngIf="loading">
           <div class="wave"></div>
           <div class="wave"></div>
           <div class="wave"></div>
@@ -16,7 +16,7 @@
           <div class="wave"></div>
           <div class="wave"></div>
           <div class="wave"></div>
-        </div>
+        </div> -->
 
         <!-- <img id="load" *ngIf="loading" src="assets/loading.gif" width="400"/> -->
         <!-- <mat-spinner *ngIf="loading" id="spin" [diameter]="150" primary style="margin-top:50px;margin:0 auto;"></mat-spinner> -->
@@ -51,46 +51,40 @@
             </mat-card-actions>
           </mat-card>
           <br/>
-          <div class="progress skill-bar">
-            <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" >
-                <span class="skill"><i class="val">5%</i></span>
-            </div>
+          
+        <div class="m-4" *ngIf="loading">
+          
+          <div class="progress">
+              <div id="loadingBar" class="progress-bar" style="width: 0%">
+                  0%
+              </div>
+          </div>
         </div>
-          <mat-stepper headerPosition="bottom" #stepper>
-            <mat-step [stepControl]="firstFormGroup">
-              <ng-template matStepLabel>Improving quality of image</ng-template>
-              <!-- <form [formGroup]="firstFormGroup">
-                <ng-template matStepLabel>Fill out your name</ng-template>
-                <mat-form-field>
-                  <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
-                </mat-form-field>
-                <div>
-                  <button mat-button matStepperNext>Next</button>
-                </div>
-              </form> -->
+
+        <div *ngIf="loading">
+         
+          <mat-stepper labelPosition="bottom" linear #stepper>
+            <mat-step [stepControl]="firstFormGroup" [editable]="false" >
+              <ng-template matStepLabel>Fill out your name</ng-template>
             </mat-step>
-            <mat-step [stepControl]="secondFormGroup">
-              <ng-template matStepLabel>Image classification</ng-template>
-              <!-- <form [formGroup]="secondFormGroup">
-                <ng-template matStepLabel>Fill out your address</ng-template>
-                <mat-form-field>
-                  <input matInput placeholder="Address" formControlName="secondCtrl" required>
-                </mat-form-field>
-                <div>
-                  <button mat-button matStepperPrevious>Back</button>
-                  <button mat-button matStepperNext>Next</button>
-                </div>
-              </form> -->
+            <mat-step [stepControl]="secondFormGroup" [editable]="false">
+              <ng-template matStepLabel>Fill out your address</ng-template>
+            </mat-step>
+            <mat-step [stepControl]="secondFormGroup" [editable]="false">
+              <ng-template matStepLabel>Fill out your address</ng-template>
+            </mat-step>
+            <mat-step [stepControl]="secondFormGroup" [editable]="false">
+              <ng-template matStepLabel>Fill out your address</ng-template>
+            </mat-step>
+            <mat-step [stepControl]="secondFormGroup" [editable]="false">
+              <ng-template matStepLabel>Fill out your address</ng-template>
             </mat-step>
             <mat-step>
               <ng-template matStepLabel>Done</ng-template>
-              <!-- You are now done.
-              <div>
-                <button mat-button matStepperPrevious>Back</button>
-                <button mat-button (click)="stepper.reset()">Reset</button>
-              </div> -->
             </mat-step>
           </mat-stepper>
+        </div>
+          
 
           <div id="progress"></div>
             <!-- Image Filters -->
