--- a/Front-End/Image-Converter/src/app/converter/converter.component.scss
+++ b/Front-End/Image-Converter/src/app/converter/converter.component.scss
@@ -302,24 +302,14 @@ bodY {
   }
 }
 
-.progress {
-  height: 35px;
-
+.progress{
+  margin-bottom: 1rem;
+  height:2rem;
 }
-.progress .skill {
-  font: normal 12px "Open Sans Web";
-  line-height: 35px;
-  padding: 0;
-  margin: 0 0 0 20px;
-  text-transform: uppercase;
+.mat-step-header {
+  pointer-events: none !important;
+  cursor: pointer;
 }
-.progress .skill .val {
-  float: right;
-  font-style: normal;
-  margin: 0 20px 0 0;
-}
-
-.progress-bar {
-  text-align: left;
-  transition-duration: 3s;
+.stepper-header{
+  pointer-events: none;
 }
